--- a/index.html
+++ b/index.html
@@ -4,24 +4,23 @@
 <body>
 
 <h1> ORTADOĞUYA HOŞ GELDİNİZ</h1> 
-<h2>3 Bin TL mi Eksik Yatırmışlar</h2>
-  
-<small>
+<h2>3 Bin TL mi Eksik Yatırmışlar HAWARA aq</h2>
+ <!-- 
+<b>
 <ul type="square">
-<li>  7.25 Uyanıyorum</li>
-<li>  8.00 de İş Başı Yapıyorum</li>
-<li>  19.00 da İşten Çıkıyorum</li>
-<li>  19.20 de Evde Oluyorum</li>
-<li>  Duş + Yemek derken saat 20.00 oluyor</li>
-<li>  !!   BAZEN aq MESAİLERİDE OLUYOR !!</li> 
+  <li>  7.25 Uyanıyorum</li>
+  <li>  8.00 de İş Başı Yapıyorum</li>
+  <li>  19.00 da İşten Çıkıyorum</li><li>  19.20 de Evde Oluyorum</li>
+  <li>  Duş + Yemek derken saat 20.00 oluyor</li>
+  <li>  !!   BAZEN aq MESAİLERİDE OLUYOR !!</li>
 </ul>
 Saat 1 de uyuyorum çünkü sabah 7.25 te kalkıyorum. bana sadece 5 saat kalıyor iş yorgunluğu cabası. İş yerindeki cahil oruspu çocuklarıylada muhattap olmak zorunda kalıyorum, dışarda görsem selam bile vermiceğim cahil ordusuyla her gün aynı iş yerinde çalıştığımız için mecbur kalıyorum.
 Bazen cahil oruspu çocuklarının beni yorduğu kadar iş beni yormuyor. içlerinde 1 cahil varki, bak 26 yaşındayım benböyle bir şey görmedim. adama kulaklığın ismi airpods tur diyorum bana döndü dedi ki; 'ne kadar cahilsin onun adı airdrop'. ve hala gülüyordu
 nasıl yani dedim, 'airdrop tur airdrop dedi' o kadar emindiki kendinden , cahil özgüveni dedikleri bu olsa gerek . googleyi aç bakalım diyecektim ama cahilliğini yüzüne vurmadım çünkü bu ibne, onu düzeltince doğru olduğunu bildiği halde hala yanlışını savunuyor. bildiğiniz öyle cahilleri demi
 yani diyeceğim o ki bu işinde aq patronunda aq işçisininde aq.  işimiz bitmiş bu aq salağı patron boş durmayın bir şeylerle uğraşın yürüyün bir şeyler yapın diyor. yaw düzeninizi de saltanatınızında sizin gibi işçileri+patronlarında aq.
 asgari ücret + yol + yemek + sigorta = bana tabi ol , benim kölem ol , sabit iş dediğiniz işe sokayım bi sifonunuzu çektirmediniz aq aç gözlü yaratıkları.
-</small>
-
+</b>
+-->
 </body>
 </center>
 </html>
