--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
 <h1> ORTADOĞUYA HOŞ GELDİNİZ</h1> 
 <h2>3 Bin TL mi Eksik Yatırmışlar HAWARA aq</h2>
+<img src="https://cf.kizlarsoruyor.com/q3026154/c4230664-32dd-409c-aa35-d55ed4310319.jpg" alt="15 BANKNOTUM EKSİK"/>
+ <div class="text"><center>BU PARADAN 15 BANKNOTUM EKSİK <br>PARAMI VERİN aq</br> </center></div>
  <!-- 
 <b>
 <ul type="square">
