--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <title>CAHİLLERLE MÜCADE TİMİ</title>
 <center>
-<body>
+<body background="https://images.ecestaticos.com/4PtFmMORDsMv-im_LNXtQnXKus0=/0x0:1023x575/1600x900/filters:fill(white):format(jpg)/f.elconfidencial.com%2Foriginal%2F8d7%2F31b%2F1aa%2F8d731b1aaa18dfc095c4cedce9ef201d.jpg">
 
 <h1> ORTADOĞUYA HOŞ GELDİNİZ</h1> 
 <h2>3 Bin TL mi Eksik Yatırmışlar HAWARA aq</h2>
