--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <center>
 <body background="https://c4.wallpaperflare.com/wallpaper/526/574/538/adolf-anarchy-dark-evil-wallpaper-preview.jpg">
 
-<h1> ORTADOĞUYA HOŞ GELDİNİZ</h1> 
-<h2>3 Bin TL mi Eksik Yatırmışlar HAWARA aq</h2>
+<h1> <p style="color:DodgerBlue;"ORTADOĞUYA HOŞ GELDİNİZ"</p> </h1> 
+<h2> <p style="color:DodgerBlue;"3 Bin TL mi Eksik Yatırmışlar HAWARA aq"</p> </h2>
 <br>
 <img src="https://cf.kizlarsoruyor.com/q3026154/c4230664-32dd-409c-aa35-d55ed4310319.jpg" alt="15 BANKNOTUM EKSİK"/>
- <div class="text"><center><br>BU PARADAN 15 BANKNOTUM EKSİK</br><br>PARAMI VERİN </br> </center></div>
+ <div class="text"><center><br> <p style="color:DodgerBlue;"BU PARADAN 15 BANKNOTUM EKSİK"</p> </br><br> <p style="color:DodgerBlue;"PARAMI VERİN"</p> </br> </center></div>
 </br>
  <!-- 
 <b>
