--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 <title>CAHİLLERLE MÜCADE TİMİ</title>
 <center>
-<body background="https://c4.wallpaperflare.com/wallpaper/526/574/538/adolf-anarchy-dark-evil-wallpaper-preview.jpg">
+<body>
 
-<h1 style="background-color:DodgerOrange;"ORTADOĞUYA HOŞ GELDİNİZ" </h1> 
-<h2 style="background-color:DodgerOrange;"3 Bin TL mi Eksik Yatırmışlar HAWARA aq" </h2>
+<h1> ORTADOĞUYA HOŞ GELDİNİZ </h1> 
+<h2> 3 Bin TL mi Eksik Yatırmışlar HAWARA aq </h2>
 <br>
 <img src="https://cf.kizlarsoruyor.com/q3026154/c4230664-32dd-409c-aa35-d55ed4310319.jpg" alt="15 BANKNOTUM EKSİK"/>
- <div class="text"><center><br style="background-color:DodgerOrange;"BU PARADAN 15 BANKNOTUM EKSİK" </br><br style="background-color:DodgerOrange;"PARAMI VERİN" </br> </center></div>
+ <div class="text"><center><br> BU PARADAN 15 BANKNOTUM EKSİK </br> <br PARAMI VERİN </br> </center></div>
 </br>
  <!-- 
 <b>
