--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <title>CAHİLLERLE MÜCADE TİMİ</title>
 <center>
-<body>
+<body background="https://raw.githubusercontent.com/cehalet/cehalet.github.io/refs/heads/main/a.png">
 
 <h1> ORTADOĞUYA HOŞ GELDİNİZ </h1> 
 <h2> 3 Bin TL mi Eksik Yatırmışlar HAWARA aq </h2>
