--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <center>
 <body background="https://raw.githubusercontent.com/cehalet/cehalet.github.io/refs/heads/main/a.png">
 
-<h1> ORTADOĞUYA HOŞ GELDİNİZ </h1> 
-<h2> 3 Bin TL mi Eksik Yatırmışlar HAWARA aq </h2>
+<h1 style="background-color:OrangeRed;"> ORTADOĞUYA HOŞ GELDİNİZ </h1> 
+<h2 style="background-color:OrangeRed;"> 3 Bin TL mi Eksik Yatırmışlar HAWARA aq </h2>
 <br>
 <img src="https://cf.kizlarsoruyor.com/q3026154/c4230664-32dd-409c-aa35-d55ed4310319.jpg" alt="15 BANKNOTUM EKSİK"/>
  <div class="text"><center><br> BU PARADAN 15 BANKNOTUM EKSİK </br> <br PARAMI VERİN </br> </center></div>
