--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h2 style="color:FireBrick ;"> 3 Bin TL mi Eksik Yatırmışlar HAWARA aq </h2>
 <br>
 <img src="https://cf.kizlarsoruyor.com/q3026154/c4230664-32dd-409c-aa35-d55ed4310319.jpg" alt="15 BANKNOTUM EKSİK"/>
- <div class="text"><center> <br> <h3 style="color:FireBrick ;">BU PARADAN 15 BANKNOTUM EKSİK</h3> <h3 style="color:FireBrick ;"<h3 style="color:FireBrick ;">PARAMI VERİN</h3> </center></div>
+ <div class="text"><center> <h3 style="color:FireBrick ;">BU PARADAN 15 BANKNOTUM EKSİK</h3> <h3 style="color:FireBrick ;"<h3 style="color:FireBrick ;">PARAMI VERİN</h3> </center></div>
  
  <!-- 
 <b>
