--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <br>
 
 <h1 style="color:FireBrick ;"> ORTADOĞUYA HOŞ GELDİNİZ </h1> 
-<b style="color:FireBrick ;"> 3 Bin TL mi Eksik Yatırmışlar HAWARA aq </b>
+<h2 style="color:FireBrick ;"> 3 Bin TL mi Eksik Yatırmışlar HAWARA aq </h2>
 <img src="https://cf.kizlarsoruyor.com/q3026154/c4230664-32dd-409c-aa35-d55ed4310319.jpg" alt="15 BANKNOTUM EKSİK"></img>
 <div class="text"><center style="color:FireBrick ;"> <b>BU PARADAN 15 BANKNOTUM EKSİK </b></center></div> <div class="text"><center style="color:FireBrick ;"><b>PARAMI VERİN</b></center></div>
  
