--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <br>
 <br>
 <br>
-<h1 style="color:FireBrick ;"> ORTADOĞUYA HOŞ GELDİNİZ </h1> 
-<b style="color:FireBrick ;"> 3 BİN TL Mİ EKSİK YATIRMIŞLAR HAWARA Aq </b>
+<h1 style="color:FireBrick ;"> MERHABA BOK ÇUKURU ORTADOĞU (aq) </h1> 
+<b style="color:FireBrick ;"> GÜNLERDEN 3 BİN TL Mİ EKSİK YATIRMIŞLAR GÜNÜ (aq) </b>
 <br>
 <img src="https://cf.kizlarsoruyor.com/q3026154/c4230664-32dd-409c-aa35-d55ed4310319.jpg" alt="15 BANKNOTUM EKSİK"></img>
-<div class="text"><center style="color:FireBrick ;"> <b>BU PARADAN 15 BANKNOTUM EKSİK </b></center></div> <div class="text"><center style="color:FireBrick ;"><b>PARAMI VERİN</b></center></div>
+<div class="text"><center style="color:FireBrick ;"> <b>BU PARADAN 15 BANKNOTUM EKSİK </b></center></div> <div class="text"><center style="color:FireBrick ;"><b>PARAMI VERİN BABA</b></center></div>
  
  <!-- 
 <b>
