--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <b style="color:FireBrick ;"> Great Commander ADOLF HİTLER </b>
 <br>
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/COA_Luftwaffe_eagle_gold.svg/1200px-COA_Luftwaffe_eagle_gold.svg.png" alt="15 BANKNOTUM EKSİK"></img>
-
+<b style="color:FireBrick ;"> LONG LİVE ADOLF HİTLER </b>
  
  <!-- 
 <b>
