--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <br>
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/COA_Luftwaffe_eagle_gold.svg/1200px-COA_Luftwaffe_eagle_gold.svg.png" alt="15 BANKNOTUM EKSİK"></img>
 <br>
-<b style="color:FireBrick ;"> LONG LİVE ADOLF HİTLER </b>
+<br>
+<h1 style="color:FireBrick ;"> LONG LIVE ADOLF HİTLER </h1>
  
  <!-- 
 <b>
